--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,24 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/vendor/font-awesome.min.css",
+              "src/assets/css/vendor/material-design-iconic-font.min.css",
+              "src/assets/css/vendor/ionicons.min.css",
+              "src/assets/css/vendor/flaticon.min.css",
+              "src/assets/css/plugins/swiper.min.css",
+              "src/assets/css/plugins/animate.min.css",
+              "src/assets/css/plugins/lightgallery.min.css",
+
+              "src/assets/css/et-line.css",
+              "src/assets/css/font-awesome.min.css",
+              "src/assets/css/plugins.css",
+              "src/assets/css/responsive.css",
+              "src/assets/css/style.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
