--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "@ngxs/store": "^3.8.1",
     "angular-responsive-carousel": "^2.1.2",
     "jquery": "^3.6.4",
     "ngx-spinner": "^9.0.2",
